Correctly aligned all header elements

--- a/Trillo/css/style.css
+++ b/Trillo/css/style.css
@@ -138,6 +138,19 @@ body {
 
 .user-nav {
   background-color: greenyellow;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+}
+.user-nav > * {
+  padding: 0 2rem;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.user-nav > *:hover {
+  background-color: var(--color-grey-light-2);
 }
 .user-nav__icon {
   height: 2.25rem;
